fix horizontal scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ body{
     background-color: aliceblue;
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
-    padding: 40px 80px;;
+    padding: 40px 80px;
+    overflow-x: hidden;
 }
 *{
     margin: 0;
@@ -19,6 +20,7 @@ h6{
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
+    width: 80%;
 }
 .opsitions-div{
     margin-left: 30px;
